[package]
name = "bevy_carp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["serialize"] }
rand = "*"
rand_pcg = "*"
bevy_egui = "0.14"
egui_extras = "0.18.0"
bevy_kira_audio = { version="0.10", features=["mp3"] }
serde = "*"
serde_json = "*"
bevy_pkv = "0.5"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
